--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,10 @@
-{{!-- The following component displays Ember's default welcome message. --}}
-{{welcome-page}}
-{{!-- Feel free to remove this! --}}
+
+<nav>
+  <ul class='navigation'>
+    <li>{{#link-to "receive"}}Receive{{/link-to}}</li>
+    <li>{{#link-to "settings"}}Settings{{/link-to}}</li>
+    <li>{{#link-to "send"}}Send{{/link-to}}</li>
+  </ul>
+</nav>
 
 {{outlet}}
